cpmment for chapter 1

--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -1,5 +1,6 @@
 <!-- This is the comments for the header -->
  <h1>Book</h1>
+ <!-- this the comment for chapter 1-->
   <h2>Chapter 1</h2>
     <h3>Section</h3>
     <h3>Section 2</h3>
