--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -2,6 +2,7 @@
  <h1>Book</h1>
  <!-- this the comment for chapter 1-->
   <h2>Chapter 1</h2>
+   <!--This the comment for the section-->
     <h3>Section</h3>
     <h3>Section 2</h3>
   <h2>Chapter 2</h2>
