finish exercise about anchor

--- a/3.2 Anchor Elements/index.html
+++ b/3.2 Anchor Elements/index.html
@@ -1,3 +1,9 @@
-<h1>My top 5 Favourite Websites</h1>
+<h1>My top 5 Favourite Websites right now as of 1/6/2025</h1>
 <!-- Write your code below -->
- <a href=""></a>
+ <ol>
+    <li><a href="https://www.youtube.com/">Youtube</a></li>
+    <li><a href="https://www.linkedin.com/in/keyshawnjeannot">linkedin</a></li>
+    <li><a href="https://www.netflix.com/">Netflix</a></li>
+    <li><a href="https://www.w3schools.com/">W3schools</a></li>
+    <li><a href="https://github.com/The1keyy?tab=overview&from=2025-01-01&to=2025-01-04">Github</a></li> 
+</ol>
