--- a/4.0 File Paths/Folder0/index.html
+++ b/4.0 File Paths/Folder0/index.html
@@ -1,9 +1,12 @@
 <h1>All the Animals</h1>
 <h2>Rabbit:</h2>
+<img src="rabbit.png" alt="rabbit">
 
 <h2>Cat:</h2>
+<img src="Folder3/cat.png" alt="cat">
 
 <h2>Dog:</h2>
+<img src"dog.png" alt="dog">
 
 <h2>Fish:</h2>
 
