add links to About and Contact pages in index.html

--- a/4.1+Webpages/index.html
+++ b/4.1+Webpages/index.html
@@ -1,5 +1,7 @@
 <h1>Welcome to My Website!</h1>
 <!-- Add an image of yourself that links to the about page -->
+ <a href="./public/about.html"><img src="../3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/IMG_3203.JPG"/></a>
 
 <hr />
 <!-- Add a link to your contact me page here -->
+ <a href="./public/contact.html">Contact Me</a>
