add header and subtitle to index.html for portfolio introduction

--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -5,6 +5,10 @@
     <title>Porfolio website</title>
 </head>
 <body>
+    <h1>Keyshawn Jeannot's Portfolio</h1>
+    <h2>Short over break Projects</h2>
+    <hr>
+
     
 </body>
 </html>
