add links to Birthday Invite and My Top Anime Shows in index.html

--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -8,6 +8,12 @@
     <h1>Keyshawn Jeannot's Portfolio</h1>
     <h2>Short over break Projects</h2>
     <hr>
+    <a href="./public/movie-p.html">My Top Anime Shows</a>
+    
+    <br>
+    <a href="./public/birthday.html">Birthday Invite Project</a>
+    <hr>
+    <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
 
     
 </body>
