--- a/4.3 HTML Porfolio Project/public/birthday.html
+++ b/4.3 HTML Porfolio Project/public/birthday.html
@@ -3,7 +3,7 @@
 <h2>On the 17th Birthday !!!!</h2>
 
 <!-- Example image URL -->
-<image src="IMG_3203.JPG"/>
+<image src=""/>
 
 <h3> What to bring: </h3>
 <ul>
