update birthday.html with specific date and image source

--- a/4.3 HTML Porfolio Project/public/birthday.html
+++ b/4.3 HTML Porfolio Project/public/birthday.html
@@ -1,9 +1,9 @@
 <h1>Its Key's Birthday!</h1>
 
-<h2>On the 17th Birthday !!!!</h2>
+<h2>On the 17th of April!!!!</h2>
 
 <!-- Example image URL -->
-<image src=""/>
+<image src="../assets/images/IMG_3203.JPG" height = 200/>
 
 <h3> What to bring: </h3>
 <ul>
