--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -5,13 +5,16 @@
     <title>Porfolio website</title>
 </head>
 <body>
-    <h1>Keyshawn Jeannot's Portfolio</h1>
-    <h2>Short over break Projects</h2>
+    <h1>Keyshawn Jeannot's Exersise projects</h1>
+    <h2>Projects</h2>
     <hr>
-    <a href="./public/movie-p.html">My Top Anime Shows</a>
-    
+    <br />
+    <h3><a href="./public/movie-p.html">My Top Anime Shows</a></h3>
+    <img src="../4.3 HTML Porfolio Project/assets/images/animme ss.png" height = 200>
+
     <br>
-    <a href="./public/birthday.html">Birthday Invite Project</a>
+    <h3><a href="./public/birthday.html">Birthday Invite Project</a></h3>
+    <img src="../4.3 HTML Porfolio Project/assets/images/birthday invite.png" height = 200>
     <hr>
     <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
 
