update index.html to correct spelling in header for exercise projects

--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -5,7 +5,7 @@
     <title>Porfolio website</title>
 </head>
 <body>
-    <h1>Keyshawn Jeannot's Exersise projects</h1>
+    <h1>Keyshawn Jeannot's Quick Exersise Projects</h1>
     <h2>Projects</h2>
     <hr>
     <br />
