update comment for header in Section 2 of index.html

--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -6,7 +6,7 @@
     <h3>Section</h3>
      <!-- this the comment for section 2-->
     <h3>Section 2</h3>
-    <!-- this the comment for header -->
+    <!-- this the comment for header 2 -->
   <h2>Chapter 2</h2>
     <h3>Section 1</h3>
       <h4>Diagram 1</h4>
