--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -4,7 +4,7 @@
   <h2>Chapter 1</h2>
    <!--This the comment for the section-->
     <h3>Section</h3>
-     <!-- this the comment for section 2-->
+     <!-- This the comment for section 2-->
     <h3>Section 2</h3>
     <!-- This the comment for header 2  -->
   <h2>Chapter 2</h2>
