--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -10,6 +10,7 @@
   <h2>Chapter 2</h2>
     <!-- This the comment for header 3-->
     <h3>Section 1</h3>
+    <!-- This the comment for header 4-->
       <h4>Diagram 1</h4>
   <h2>Chapter 3</h2>
     <h3>Section 1</h3>
