--- a/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
+++ b/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+<div style="height: 200; width: 200px;"> </div>
+<div style="height: 200; width: 200px;"> </div>
+<div style="height: 200; width: 200px;"> </div>
 
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
