--- a/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
+++ b/6.3+CSS+Box+Model/6.3 CSS Box Model/index.html
@@ -6,14 +6,39 @@
   <title>CSS Box Model</title>
   <style>
     /* Write your CSS code here */
+    div {
+    height: 200px;
+    width: 200px;
+    }
+    p {
+      margin: 0;
+    }
+    #first {
+      background-color: skyblue;
+      padding: 20px;
+      border: 10px solid black;
+      }
+     #second {
+      background-color: gold;
+      border: solid black;
+      border-width: 20px 10px;
+      margin-left: 260px;
+      }
+     #third {
+      background-color: indianred;
+      border: 10px solid black;
+      margin-left: 40px;
+      }
 
   </style>
 </head>
 
 <body>
-<div style="height: 200; width: 200px;"> </div>
-<div style="height: 200; width: 200px;"> </div>
-<div style="height: 200; width: 200px;"> </div>
+<div id="first"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+  id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+  dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</div>
+<div id="second"> </div>
+<div id="third"> </div>
 
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
