feat: enhance HTML structure and styling for Motivation Meme Project

--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -24,9 +24,30 @@ But it must have the following features:
       body {
         background-color: black;
       }
+      img {
+        border: white 5px solid;
+        width: 50%;
+      }
+      dev {
+        width: 50%;
+        margin-left: 25%;
+        text-align: center;
+      }
+      h1 {
+        font-family: 'Libre Baskerville', serif;
+        color: white;
+        text-transform: uppercase;
+      }
+      p {
+        color: white;
+      }
     </style>
   </head>
   <body>
-    
+    <dev>
+      <img src="./assets/images/spngebob.jpg" alt="spongebob"/>
+      <h1>How Do We Change The World? One Random Act of Kindness At a time.</h1>
+      <p>Be the change you want to see in the world.</p>
+    </dev>
   </body>
   </html>
