--- a/2.1+Heading+Element/2.1 Heading Element/index.html
+++ b/2.1+Heading+Element/2.1 Heading Element/index.html
@@ -14,7 +14,7 @@
       <h4>Diagram 1</h4>
       <!-- This the cooment for chapter 3 -->
   <h2>Chapter 3</h2>
-  <!-- this the cooment for section  -->
+  <!-- This the cooment for section  -->
     <h3>Section 1</h3>
     <!-- This the comment for section 2 -->
     <h3>Section 2</h3>
