--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -6,7 +6,41 @@
   <title>CSS Flag Project</title>
   <style>
     /* Write your CSS Code here */
+    .flag {
+      background-color: red;
+      width: 900px;
+      height: 600px;
+    }
+
+    .flag>div {
+      background-color: blue;
+      position: absolute;
+      width: 100%;
+      height: 300px;
+      top: 150px;
+    }
+
+    .flag>div>div {
+      background-color: white;
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      top: 20%;
+      left: 350px;
+    }
     
+    p {
+      font-size: 5rem;
+      color: white;
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    .flag>div div p {
+      color: black;
+    }
   </style>
 </head>
 
