feat: add container with multiple red items in index.html for Mondrian project

--- a/10.3 Mondrian Project/index.html
+++ b/10.3 Mondrian Project/index.html
@@ -24,6 +24,13 @@
 
 <body>
   <!-- Write your HTML here -->
+   <div class ="container">
+    <div class="item red"></div>
+    <div class="item red"></div>
+    <div class="item red"></div>
+    <div class="item red"></div>
+    <div class="item red"></div>
+   </div>
 </body>
 
 </html>
